# rrk

./: .gitignore  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yaml  release.yml
src/: Cargo.toml  lib.rs  main.rs
src/assets/layouts/: colemak.json  qwerty.json  ru.json
src/core/: geometry.rs  id.rs  keyboard.rs  layout.rs  mod.rs  optimize.rs  scoring.rs  stats.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/storage/: mod.rs
src/ui/: editor.rs  mod.rs
